samples/bookinfo/routing-rules/route-rule-details-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details-route
spec:
  hosts:
  - details
  http:
  - route:
    - destination:
        name: details
        subset: v2
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: details-destination
spec:
  name: details
  subsets:
  - name: v2
    labels:
      version: v2
---
