samples/bookinfo/routing-rules/route-rule-ratings-test-abort.yaml
apiVersion: config.istio.io/v1alpha2 # TODO: change to networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings-route
spec:
  hosts:
  - ratings
  http:
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(user=jason)(;.*)?$"
    fault:
      abort:
        percent: 100
        httpStatus: 500
  - route:
    - destination:
        name: ratings
        subset: v1
      weight: 100
---
apiVersion: config.istio.io/v1alpha2 # TODO: change to networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ratings-destination
spec:
  name: ratings
  subsets:
  - name: v1
    labels:
      version: v1
---
