samples/bookinfo/routing-rules/route-rule-reviews-test-v2.yaml
apiVersion: config.istio.io/v1alpha2 # TODO: change to networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
spec:
  hosts:
    - reviews
  http:
  - match:
    - headers:
        cookie:
          regex: "^(.*?;)?(user=jason)(;.*)?$"
    route:
    - destination:
        name: reviews
        subset: v2
      weight: 100
  - route:
    - destination:
        name: reviews
        subset: v1
      weight: 100
---
apiVersion: config.istio.io/v1alpha2 # TODO: change to networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews-destination
spec:
  name: reviews
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
