samples/bookinfo/routing-rules/route-rule-reviews-v2-v3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-route
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        name: reviews
        subset: v2
      weight: 50
    - destination:
        name: reviews
        subset: v3
      weight: 50
